// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render MyListPage MyListPage should match with snapshot 1`] = `
<div
  className="user-page"
>
  <h1
    className="visually-hidden"
  >
    WTW
  </h1>
  <header
    className="page-header false user-page__head"
  >
    <div
      className="logo"
    >
      <a
        className="logo__link false"
        href="/"
        onClick={[Function]}
        style={
          Object {
            "pointerEvents": "none",
          }
        }
      >
        <span
          className="logo__letter logo__letter--1"
        >
          W
        </span>
        <span
          className="logo__letter logo__letter--2"
        >
          T
        </span>
        <span
          className="logo__letter logo__letter--3"
        >
          W
        </span>
      </a>
    </div>
    <div
      className="user-block"
    >
      <a
        href="/myList"
        onClick={[Function]}
      >
        <div
          className="user-block__avatar"
        >
          <img
            alt="User avatar"
            height="63"
            src="/img/avatar.jpg"
            width="63"
          />
        </div>
      </a>
    </div>
    <h1
      className="page-title user-page__title"
    >
      My list
    </h1>
  </header>
  <section
    className="catalog"
  >
    <h2
      className="catalog__title visually-hidden"
    >
      Catalog
    </h2>
  </section>
  <footer
    className="page-footer"
  >
    <div
      className="logo"
    >
      <a
        className="logo__link logo__link--light"
        href="/"
        onClick={[Function]}
        style={
          Object {
            "pointerEvents": "none",
          }
        }
      >
        <span
          className="logo__letter logo__letter--1"
        >
          W
        </span>
        <span
          className="logo__letter logo__letter--2"
        >
          T
        </span>
        <span
          className="logo__letter logo__letter--3"
        >
          W
        </span>
      </a>
    </div>
    <div
      className="copyright"
    >
      <p>
        © 2019 What to watch Ltd.
      </p>
    </div>
  </footer>
</div>
`;

exports[`Render MyListPage MyListPage should match with snapshot with error 1`] = `
<div
  className="user-page"
>
  <h1
    className="visually-hidden"
  >
    WTW
  </h1>
  <header
    className="page-header false user-page__head"
  >
    <div
      className="logo"
    >
      <a
        className="logo__link false"
        href="/"
        onClick={[Function]}
        style={
          Object {
            "pointerEvents": "none",
          }
        }
      >
        <span
          className="logo__letter logo__letter--1"
        >
          W
        </span>
        <span
          className="logo__letter logo__letter--2"
        >
          T
        </span>
        <span
          className="logo__letter logo__letter--3"
        >
          W
        </span>
      </a>
    </div>
    <div
      className="user-block"
    >
      <a
        href="/myList"
        onClick={[Function]}
      >
        <div
          className="user-block__avatar"
        >
          <img
            alt="User avatar"
            height="63"
            src="/img/avatar.jpg"
            width="63"
          />
        </div>
      </a>
    </div>
    <h1
      className="page-title user-page__title"
    >
      My list
    </h1>
  </header>
  <section
    className="catalog"
  >
    <h2
      className="catalog__title"
    >
      Data loading error. Sorry
    </h2>
  </section>
  <footer
    className="page-footer"
  >
    <div
      className="logo"
    >
      <a
        className="logo__link logo__link--light"
        href="/"
        onClick={[Function]}
        style={
          Object {
            "pointerEvents": "none",
          }
        }
      >
        <span
          className="logo__letter logo__letter--1"
        >
          W
        </span>
        <span
          className="logo__letter logo__letter--2"
        >
          T
        </span>
        <span
          className="logo__letter logo__letter--3"
        >
          W
        </span>
      </a>
    </div>
    <div
      className="copyright"
    >
      <p>
        © 2019 What to watch Ltd.
      </p>
    </div>
  </footer>
</div>
`;
